tokenizer test with github provider

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,8 @@ DATABASE_URL="postgresql://postgres:password@localhost:5432/nextjs-to-aws"
 # NEXTAUTH_SECRET=""
 NEXTAUTH_URL="http://localhost:3000"
 
-# Next Auth Discord Provider
-DISCORD_CLIENT_ID=""
-DISCORD_CLIENT_SECRET=""
+# Next Auth Github Provider
+GITHUB_ID=""
+GITHUB_SECRET=""
+
+JWT_SECRET=""
