--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
     "drizzle-orm": "^0.29.3",
+    "js-tiktoken": "^1.0.10",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
+    "pg": "^8.11.3",
     "postgres": "^3.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
