--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "js-tiktoken": "^1.0.10",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
+    "node-html-parser": "^6.1.12",
     "pg": "^8.11.3",
     "postgres": "^3.4.3",
     "react": "18.2.0",
