--- a/package.json
+++ b/package.json
@@ -7,27 +7,41 @@
     "build": "next build",
     "db:push": "drizzle-kit push:pg",
     "db:studio": "drizzle-kit studio",
-    "dev": "next dev",
+    "dev": "concurrently -n \"lint,next\" -c \"bgBlue.bold,bgBlack.bold\" \"tsc --noEmit --incremental --watch\" \"NODE_ENV=development && next dev\"",
     "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
-    "@auth/drizzle-adapter": "^0.3.6",
+    "@auth/core": "^0.27.0",
+    "@auth/drizzle-adapter": "^0.3.5",
+    "@hookform/resolvers": "^3.3.4",
+    "@libsql/client": "0.3.6",
+    "@radix-ui/react-alert-dialog": "1.0.4",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.43.6",
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "drizzle-orm": "^0.29.3",
     "js-tiktoken": "^1.0.10",
+    "lucide-react": "^0.338.0",
     "next": "^14.0.4",
-    "next-auth": "^4.24.5",
+    "next-auth": "5.0.0-beta.4",
+    "next-themes": "^0.2.1",
     "node-html-parser": "^6.1.12",
-    "pg": "^8.11.3",
-    "postgres": "^3.4.3",
+    "pg": "8.11.3",
+    "postgres": "3.3.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.50.1",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "zod": "^3.22.4"
@@ -40,17 +54,16 @@
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
     "autoprefixer": "^10.4.14",
+    "concurrently": "^8.2.2",
     "drizzle-kit": "^0.20.9",
     "eslint": "^8.54.0",
     "eslint-config-next": "^14.0.4",
     "postcss": "^8.4.31",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
-    "tailwindcss": "^3.3.5",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.1.6"
-  },
-  "ct3aMetadata": {
-    "initVersion": "7.26.0"
-  },
-  "packageManager": "npm@10.2.1"
+  }
 }
