--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "scripts": {
     "build": "next build",
+    "db:generate": "drizzle-kit generate:pg --schema=./src/server/db/schema.ts --out=./src/server/db/migrations",
+    "db:migrate": "tsx src/server/db/migrate.ts",
     "db:push": "drizzle-kit push:pg",
     "db:studio": "drizzle-kit studio",
     "dev": "concurrently -n \"lint,next\" -c \"bgBlue.bold,bgBlack.bold\" \"tsc --noEmit --incremental --watch\" \"NODE_ENV=development && next dev\"",
@@ -13,16 +15,16 @@
   },
   "dependencies": {
     "@auth/core": "^0.27.0",
-    "@auth/drizzle-adapter": "^0.3.5",
+    "@auth/drizzle-adapter": "^0.7.0",
     "@hookform/resolvers": "^3.3.4",
-    "@libsql/client": "0.3.6",
-    "@radix-ui/react-alert-dialog": "1.0.4",
+    "@libsql/client": "0.5.2",
+    "@radix-ui/react-alert-dialog": "1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-dialog": "1.0.4",
+    "@radix-ui/react-dialog": "1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-toast": "^1.1.5",
-    "@t3-oss/env-nextjs": "^0.7.1",
+    "@t3-oss/env-nextjs": "^0.9.2",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.43.6",
     "@trpc/next": "^10.43.6",
@@ -30,15 +32,16 @@
     "@trpc/server": "^10.43.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dotenv": "^16.4.5",
     "drizzle-orm": "^0.29.3",
     "js-tiktoken": "^1.0.10",
-    "lucide-react": "^0.338.0",
+    "lucide-react": "^0.341.0",
     "next": "^14.0.4",
     "next-auth": "5.0.0-beta.4",
     "next-themes": "^0.2.1",
     "node-html-parser": "^6.1.12",
     "pg": "8.11.3",
-    "postgres": "3.3.5",
+    "postgres": "3.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.50.1",
@@ -49,10 +52,11 @@
   "devDependencies": {
     "@types/eslint": "^8.44.7",
     "@types/node": "^18.17.0",
+    "@types/pg": "^8.11.2",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
-    "@typescript-eslint/parser": "^6.11.0",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
     "autoprefixer": "^10.4.14",
     "concurrently": "^8.2.2",
     "drizzle-kit": "^0.20.9",
@@ -64,6 +68,7 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.7.1",
     "typescript": "^5.1.6"
   }
 }
